styled projects, alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: radial-gradient(
     farthest-corner at 50% 25%,
-    rgba(200, 220, 220),
-    rgba(155, 169, 169)
+    rgba(220, 240, 240),
+    rgba(185, 199, 199)
   );
   background-attachment: fixed;
 }
@@ -34,6 +34,8 @@ footer {
   padding: 0 1rem 0 1rem;
   background-color: #2a9d8f;
   border-radius: 0 0 1rem 1rem;
+  border: 1px solid rgba(200, 200, 200);
+  border-top: 0px;
   color: rgba(0, 0, 0, 0.85);
 }
 
@@ -50,6 +52,8 @@ footer {
   margin-top: 1rem;
   padding: 0.25rem;
   border-radius: 1rem 1rem 0 0;
+  border: 1px solid rgba(200, 200, 200);
+  border-bottom: 0px;
   background-color: #264653;
 }
 
@@ -60,6 +64,7 @@ footer {
   background-color: #e76f51;
   border-collapse: collapse;
   border-radius: 0.5rem 0.5rem 0 0;
+  border: 1px solid white;
   overflow: hidden;
 }
 
@@ -167,20 +172,23 @@ input:not(input[type="checkbox"]):focus {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   background-color: grey;
   color: rgba(255, 255, 255, 0.85);
+  cursor: pointer;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 1rem;
   box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 .btnAdd {
   background-color: #2a9d8f;
-}
-
-.btnAdd {
   display: block;
   margin-left: auto;
   margin-right: 0;
+}
+
+.btnAdd > svg {
+  vertical-align: text-bottom;
 }
 
 .btnAbout {
@@ -204,6 +212,7 @@ input:not(input[type="checkbox"]):focus {
 
   footer {
     padding: 0 0.5rem 0 0.5rem;
+    border: 0;
   }
 
   body {
@@ -220,9 +229,11 @@ input:not(input[type="checkbox"]):focus {
     margin-top: 0;
     border-radius: 0;
     padding: 0;
+    border: 0;
   }
 
   .itemsTable {
     border-radius: 0;
+    border: 0;
   }
 }
